# codonscope

./: .gitignore  CHUNK1_TASK.md  CLAUDE.md  CodonScope_Colab.ipynb  CodonScope_Project_Spec.md  README.md  STATUS.md  pyproject.toml
codonscope/: __init__.py  cli.py  report.py
codonscope/core/: cai.py  codons.py  optimality.py  orthologs.py  sequences.py  statistics.py
codonscope/data/: download.py
codonscope/modes/: deep_dive.py  differential.py  mode1_composition.py  mode2_demand.py  mode3_profile.py  mode4_collision.py  mode5_disentangle.py  mode6_compare.py  reverse.py
examples/: DATA_PROVENANCE.md  human_collagen_genes.txt  human_rp_genes.txt  mouse_rp_genes.txt  yeast_gcn4_targets.txt  yeast_glycolytic.txt  yeast_rp_genes.txt  yeast_trm_genes.txt
pilot_gene_lists/: README.md  cross_species_rp_yeast.txt  human_5top_mrnas.txt  human_differentiation_emt.txt  human_isr_upregulated.txt  human_membrane_proteins.txt  human_proliferation_myc.txt  human_ribosomal_proteins.txt  human_secreted_proteins.txt  yeast_gcn4_targets.txt  yeast_ribosomal_proteins.txt  yeast_trm4_targets.txt  yeast_trm9_targets.txt
reference_data/: README.md  human_gene_id_map.tsv  mouse_gene_id_map.tsv  yeast_gene_id_map.tsv
scripts/: README.md  counts_to_tpm.py
tests/: test_cai.py  test_chunk1.py  test_deep_dive.py  test_differential.py  test_glm.py  test_human.py  test_id_resolution.py  test_mode1.py  test_mode2.py  test_mode3.py  test_mode4.py  test_mode5.py  test_mode6.py  test_report.py  test_report_restructure.py  test_reverse.py  test_statistics.py
